# LiteNN

./: .clang-format  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  conanfile.py
.github/scripts/: compare_benchmarks.py
.github/workflows/: benchmark.yml  ci.yml
benchmark/: CMakeLists.txt  analyze_asm.ps1  bench.cpp  bench.py  bench_train.cpp  profile.cpp
cmake/: LiteNNConfig.cmake.in  LiteNNGGMLVendor.cmake
cmake/PackageSmokeTest/: CMakeLists.txt  compiler_main.cpp  main.cpp
docs/: AOTDeployment.md  APIGuide.md  Architecture.md  CUDAAOTRoadmap.md  DesignConstraints.md  DeviceBackendGuide.md  GGMLCompatibility.md  PassGuide.md  PerformanceAnalysis.md  PerformanceAnalysis_2026-05-16.md  PerformanceAnalysis_2026-05-19.md  PerformanceOptimizationRoadmap.md  README.md  Roadmap.md  Troubleshooting.md  Versioning.md
example/carrier/: CMakeLists.txt  README.md  carrier_anchor.cpp  emit_carrier.cpp  graph_common.h  shared_loader.cpp  static_loader.cpp
example/gguf/: CMakeLists.txt  README.md  conversion_example.cpp
example/mnist/: CMakeLists.txt  README.md  aot.cpp  interpreter.cpp  mnist_common.h
scripts/: GenerateModule.py
src/: LiteNN.h  LiteNN.ixx  LiteNN.ixx.template
src/LiteNN/: ComputePrimitives.h  DType.h  DataMovement.h  Device.cpp  Device.h  Device.module.cpp  Graph.h  Metadata.h  Misc.h  Operators.h  Pass.h  Quantization.h  Tensor.h
src/LiteNN/Compiler/: CMakeLists.txt  CUDANativeCodegen.cpp  CUDANativeCodegen.h  CUDANativePayload.cpp  CUDANativePayload.h  CompiledModule.cpp  CompiledModule.h  Dump.cpp  Dump.h
src/LiteNN/Compiler/Dialect/: LiteNNDialect.cpp  LiteNNDialect.h  LiteNNDialect.td  LiteNNOps.cpp  LiteNNOps.h  LiteNNOps.td
src/LiteNN/Compiler/Pass/: BufferizationPipeline.cpp  BufferizationPipeline.h  LLVMCodegenPipeline.cpp  LLVMCodegenPipeline.h  LowerLiteNNPass.cpp  LowerLiteNNPass.h
src/LiteNN/Compiler/Translation/: GraphToMLIR.cpp  GraphToMLIR.h
src/LiteNN/Debug/: Dump.cpp  Dump.h  Dump.module.cpp
src/LiteNN/Device/: CUDA.cpp  CUDA.h
src/LiteNN/Initializer/: Initializer.h
src/LiteNN/Layer/: Activation.h  AddId.h  Arange.h  Argsort.h  BatchMatMul.h  BroadcastTo.h  CausalMask.h  Conv2D.h  ConvTranspose2D.h  Cumsum.h  FlashAttnExt.h  Flatten.h  Gather.h  GroupNorm.h  Im2Col.h  KVCache.h  L2Norm.h  Layer.h  LayerNorm.h  LayerUtils.h  Linear.h  MulMatId.h  Normalization.h  OutProd.h  Pad.h  Permute.h  Pool2D.h  RMSNorm.h  RWKVWKV.h  ReLU.h  RelativePosition.h  Repeat.h  Reshape.h  RoPE.h  Roll.h  SSMConv.h  SSMScan.h  Scan.h  Scatter.h  Softmax.h  (+7 more)
src/LiteNN/Optimizer/: Adam.h  GraphOps.h  Loss.h  Optimizer.h  OptimizerUtils.h  SGD.h
src/LiteNN/Pass/: AutogradPass.h  ConstFoldPass.h  ForwardOnlyPass.h  FusionPass.h  InlinePass.h
src/LiteNN/Runtime/: Interpreter.h
src/LiteNN/Serialization/: ModelIO.h
src/LiteNN/Training/: Trainer.h
src/LiteNN/Validation/: GraphValidator.h
tests/: AutogradRegressionTest.cpp  BufferizationPassTest.cpp  CUDADeviceTest.cpp  CompiledModuleCUDATest.cpp  CompiledModuleTest.cpp  CompilerDumpTest.cpp  CompilerTest.cpp  ConcatSliceTest.cpp  ConstFoldPassTest.cpp  ConvolutionPoolingNodeTest.cpp  DataMovementNodeTest.cpp  ForwardOnlyPassTest.cpp  FusionPassTest.cpp  GGUFImporterTest.cpp  GraphDumpTest.cpp  GraphValidatorTest.cpp  InlinePassTest.cpp  InterpreterTest.cpp  LLVMCodegenPassTest.cpp  LayerTest.cpp  LoweringPassTest.cpp  MemorySafetyTest.cpp  ModelIOTest.cpp  OptimizerGraphOpTest.cpp  PermuteNodeTest.cpp  PyTorchGoldenTest.cpp  QuantizationTest.cpp  RareNumericalNodeTest.cpp  ScanHotPathNodeTest.cpp  SignatureTest.cpp  TensorTest.cpp  ThreadSafetyTest.cpp  TrainingTest.cpp  WhileNodeTest.cpp
tools/gguf/: CMakeLists.txt  GGUFImporter.cpp  GGUFImporter.h  LLaMABuilder.cpp  LLaMABuilder.h  main.cpp
